Bug 165505 [Webapp] New toc tree children aren't aligned properly

--- a/org.eclipse.help.webapp/advanced/tocTree.css
+++ b/org.eclipse.help.webapp/advanced/tocTree.css
@@ -95,4 +95,8 @@ A.nolink:hover {
 	text-decoration:none; 
 }
 
+.h {
+	visibility:hidden;
+}
+
  
